HHH-14837 - Move to Jakarta EE